--- a/cutseq.vcxproj.filters
+++ b/cutseq.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="euler_angle\EulerAngles.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="inih\ini.c">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="euler_angle\EulerAngles.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
